<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@+id/tab_layout"
        android:background="@drawable/rectangle_detail">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/location"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/company"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_domain_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_class_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:background="#ededed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar"
            android:contentDescription="@string/favorites" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:layout_centerVertical="true"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"/>

</RelativeLayout>